@@ -3,15 +3,15 @@ BSD 3-Clause License
 Copyright (c) 2003-2004, Dean Allen
 All rights reserved.
 
-Thanks to Carlo Zottmann <carlo@g-blog.net> for refactoring
-Textile's procedural code into a class framework.
+Thanks to Carlo Zottmann <carlo@g-blog.net> for refactoring Textile's procedural
+code into a class framework.
 
 Additions and fixes Copyright (c) 2006    Alex Shiels       https://twitter.com/tellyworth
-Additions and fixes Copyright (c) 2010    Stef Dawson       http://stefdawson.com/
+Additions and fixes Copyright (c) 2010    Stef Dawson       https://stefdawson.com/
 Additions and fixes Copyright (c) 2010-17 Netcarver         https://github.com/netcarver
 Additions and fixes Copyright (c) 2011    Jeff Soo          http://ipsedixit.net/
-Additions and fixes Copyright (c) 2012    Robert Wetzlmayr  http://wetzlmayr.com/
-Additions and fixes Copyright (c) 2012-19 Jukka Svahn       http://rahforum.biz/
+Additions and fixes Copyright (c) 2012    Robert Wetzlmayr  https://wetzlmayr.com/
+Additions and fixes Copyright (c) 2012-19 Jukka Svahn       https://rahforum.biz/
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
