@@ -371,7 +371,7 @@ class Parser
      * @var string
      */
 
-    protected $ver = '3.7.3';
+    protected $ver = '3.7.6';
 
     /**
      * Regular expression snippets.
@@ -1980,6 +1980,8 @@ class Parser
                 $text = $this->placeNoteLists($text);
             }
         } else {
+            $text .= "\n\n";
+
             // Treat quoted quote as a special glyph.
             $text = $this->glyphQuotedQuote($text);
 
@@ -3077,7 +3079,7 @@ class Parser
                     }
                 }
 
-                if ($m['level'] > $prev['level'] && $m['st'] !== '') {
+                if ((!$prev || $m['level'] > $prev['level']) && $m['st'] !== '') {
                     $start = ' start="' . $this->olstarts[$m['tl']] . '"';
                 }
 
@@ -3086,7 +3088,7 @@ class Parser
                 }
             }
 
-            if (strpos($prev['tl'], ';') !== false && strpos($m['tl'], ':') !== false) {
+            if ($prev && $prev['tl'] && strpos($prev['tl'], ';') !== false && strpos($m['tl'], ':') !== false) {
                 $lists[$m['tl']] = 2;
             }
 
@@ -4215,19 +4217,29 @@ class Parser
     protected function replaceLinks($text)
     {
         $stopchars = "\s|^'\"*";
+        $needle = $this->uid . 'linkStartMarker:';
+        $prev = null;
 
-        return (string)preg_replace_callback(
-            '/
-            (?P<pre>\[)?                    # Optionally open with a square bracket eg. Look ["here":url]
-            '.$this->uid.'linkStartMarker:" # marks start of the link
-            (?P<inner>(?:.|\n)*?)           # grab the content of the inner "..." part of the link, can be anything but
-                                            # do not worry about matching class, id, lang or title yet
-            ":                              # literal ": marks end of atts + text + title block
-            (?P<urlx>[^'.$stopchars.']*)    # url upto a stopchar
-            /x'.$this->regex_snippets['mod'],
-            array($this, "fLink"),
-            $text
-        );
+        while (\strpos($text, $needle) !== false) {
+            $text = (string)preg_replace_callback(
+                '/
+                (?P<pre>\[)?
+                ' . $needle . '"
+                (?P<inner>(?:.|\n)*?)
+                ":(?P<urlx>[^' . $stopchars . ']*)
+                /x' . $this->regex_snippets['mod'],
+                array($this, "fLink"),
+                $text
+            );
+
+            if ($prev === $text) {
+                break;
+            }
+
+            $prev = $text;
+        }
+
+        return $text;
     }
 
     /**
